fixed image showcase ghost shadows by moving box shadow to img element and removing overflow hidden on wrapper: https://knowawall.basecamphq.com/projects/10914522-peter-arnell-website/todo_items/171739946/comments

--- a/css/app.css
+++ b/css/app.css
@@ -3360,7 +3360,6 @@ button {
   -moz-transition: -moz-transform 150ms ease;
   -o-transition: -o-transform 150ms ease;
   transition: transform 150ms ease;
-  overflow: hidden;
 }
 /* line 25, sass/_image-showcase.scss */
 .isotope-grid .thumb {
@@ -3412,16 +3411,19 @@ button {
   -ms-transform: scale(1.2, 1.2);
   -o-transform: scale(1.2, 1.2);
   transform: scale(1.2, 1.2);
+}
+/* line 66, sass/_image-showcase.scss */
+.isotope-grid .thumb:hover img.loaded {
   -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
 }
-/* line 66, sass/_image-showcase.scss */
+/* line 70, sass/_image-showcase.scss */
 .isotope-grid .thumb:hover .caption {
   opacity: 1;
 }
 
-/* line 71, sass/_image-showcase.scss */
+/* line 75, sass/_image-showcase.scss */
 .caption {
   color: red;
   background: white;
@@ -3437,20 +3439,20 @@ button {
   -o-transition: opacity 150ms ease;
   transition: opacity 150ms ease;
 }
-/* line 83, sass/_image-showcase.scss */
+/* line 87, sass/_image-showcase.scss */
 .caption p {
   margin: 0;
   font-size: 0.6875em;
   font-weight: 500;
   line-height: 1;
 }
-/* line 90, sass/_image-showcase.scss */
+/* line 94, sass/_image-showcase.scss */
 .caption .year {
   font-weight: 300;
   font-size: 0.6875em;
 }
 
-/* line 97, sass/_image-showcase.scss */
+/* line 101, sass/_image-showcase.scss */
 .thumb img {
   max-height: 100%;
   max-width: 100%;
